noinst_PROGRAMS = uc2win win2mb #getbpsf

uc2win_SOURCES = uc2win.cpp

win2mb_SOURCES = win2mb.cpp

#uncomment the following lines if you want to bulid getbpsf
#getbpsf_SOURCES = getbpsf.c
#getbpsf_LDADD = -L/usr/X11R6/lib -lX11
#getbpsf_CPPFLAGS = -I/usr/X11R6/include

LDFLAGS=
CXXFLAGS=
CCFLAGS=
LIBS=

EXTRA_DIST = README getbpsf.txt gpm-1.19.6-pty.diff\
             gpm-1.19.6-patched.tar.gz

