noinst_LIBRARIES = libdisplay.a
libdisplay_a_SOURCES = fbdev.cpp fblinear15.cpp fblinear16.cpp fblinear24.cpp fblinear32.cpp fblinear4.cpp fblinear8.cpp fbvgaplanes.cpp libggi.cpp lrmi.c vgadev.cpp

EXTRA_DIST = fbdev.h fblinear15.h fblinear16.h fblinear24.h fblinear32.h fblinear4.h fblinear8.h fbvgaplanes.h libggi.h lrmi.h vgadev.h

INCLUDES = -I${top_srcdir}/src

